# robo-rover-dora

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  debug_test.yml  dev-dataflow.yml  index.html  object-tracking-framework-proposal.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  web-dataflow.yml
arm_bot_lib/: Cargo.toml
arm_bot_lib/src/: lib.rs
arm_bot_lib/src/types/: config.rs  joint_state.rs  mod.rs
arm_bot_lib/src/utils/: kinematics.rs  mod.rs
arm_controller/: Cargo.toml
arm_controller/src/: main.rs
audio_capture/: Cargo.toml
audio_capture/src/: main.rs
audio_converter/: Cargo.toml
audio_converter/src/: main.rs
audio_playback/: Cargo.toml
audio_playback/src/: main.rs
camera_capture/: Cargo.toml
camera_capture/src/: main.rs
command_parser/: Cargo.toml
command_parser/src/: main.rs
config/: arm_4dof.toml  simulation.toml
config_test/: Cargo.toml
config_test/src/: main.rs
dispatcher_keyboard/: Cargo.toml
dispatcher_keyboard/src/: main.rs
docs/: architecture.md  deployment-cloudflare-tunnel.md
interactive_keyboard/: Cargo.toml
interactive_keyboard/src/: main.rs
kokoro_tts/: Cargo.toml
kokoro_tts/src/: main.rs
kornia-gst-capture/: Cargo.toml
kornia-gst-capture/src/: main.rs
kornia_capture/: Cargo.toml
kornia_capture/src/: main.rs
models/: README.md  export_to_onnx.py
models/scripts/: check_all_models.py  download_kokoro_models.sh  download_onnxruntime.sh
monitor/: Cargo.toml
monitor/src/: main.rs
object_detector/: Cargo.toml
object_detector/src/: main.rs
object_tracker/: Cargo.toml
object_tracker/src/: main.rs
orchestra/: orchestra-dataflow.yml
orchestra/audio_converter/: Cargo.toml
orchestra/audio_converter/src/: main.rs
orchestra/command_parser/: Cargo.toml
orchestra/command_parser/src/: main.rs
orchestra/sim_interface/: Cargo.toml
orchestra/sim_interface/src/: main.rs
orchestra/speech_recognizer/: Cargo.toml
orchestra/video_encoder/: Cargo.toml
orchestra/video_encoder/src/: main.rs
orchestra/web_bridge/: Cargo.toml
orchestra/web_bridge/src/: main.rs  security.rs
orchestra/zenoh_bridge/: Cargo.toml  zenoh_config.json5
orchestra/zenoh_bridge/src/: main.rs
performance_monitor/: Cargo.toml
robo-control-app/: .env  package.json
robo-control-app/src/: App.tsx
robo-control-app/src-tauri/: Cargo.toml  tauri.conf.json
robo-control-app/src/components/: Button.tsx  CameraViewer.tsx  Card.tsx  FloatingMetrics.tsx  LocationMap.tsx  TranscriptionDisplay.tsx  VoiceControls.tsx
robo-control-app/src/components/atoms/: IconBadge.tsx  StatCard.tsx  ValueDisplay.tsx  index.ts
robo-control-app/src/components/molecules/: CollapsibleSection.tsx  SliderControl.tsx  index.ts
robo-control-app/src/components/organisms/: FleetSelector.tsx  JointControlPanel.tsx  index.ts
robo-control-app/src/components/pages/: RoboRoverControl.tsx
robo-control-app/src/hooks/: index.ts  useDraggableWindow.ts
robo-control-app/src/types/: commands.ts  fleet.ts  index.ts  robo.ts  telemetry.ts  tracking.ts  ui.ts
robo-rover-app/: README.md  pnpm-lock.yaml
robo-rover-app/apps/native/src/: App.tsx
robo-rover-app/apps/native/src-tauri/: Cargo.toml
robo-rover-app/apps/web/app/: layout.tsx  page.tsx
robo-rover-app/apps/web/app/robo-rover/: layout.tsx  page.tsx
robo-rover-control/: index.html  package-lock.json  package.json
robo_rover_lib/: Cargo.toml
robo_rover_lib/src/: lib.rs
robo_rover_lib/src/types/: arm_command.rs  arm_telemetry.rs  arm_types.rs  config.rs  detection_types.rs  fleet_types.rs  joint_state.rs  mod.rs  nlu_types.rs  performance_types.rs  rover_types.rs  speech_types.rs  tts_types.rs  video_types.rs
robo_rover_lib/src/utils/: mecanum_kinematics.rs  mod.rs  tracing.rs
rover-kiwi/: rover-kiwi-dataflow.yml
rover-kiwi/arm_controller/: Cargo.toml
rover-kiwi/arm_controller/src/: main.rs
rover-kiwi/audio_capture/: Cargo.toml
rover-kiwi/audio_playback/: Cargo.toml
rover-kiwi/config/: arm_6dof.toml  simulation.toml
rover-kiwi/dispatcher_keyboard/: Cargo.toml
rover-kiwi/kokoro_tts/: Cargo.toml
rover-kiwi/kokoro_tts/src/: main.rs
rover-kiwi/kornia_capture/: Cargo.toml
rover-kiwi/object_detector/: Cargo.toml
rover-kiwi/object_tracker/: Cargo.toml
rover-kiwi/performance_monitor/: Cargo.toml
rover-kiwi/performance_monitor/src/: main.rs
rover-kiwi/rover_controller/: Cargo.toml
rover-kiwi/rover_controller/src/: main.rs
rover-kiwi/visual_servo_controller/: Cargo.toml
rover-kiwi/visual_servo_controller/src/: main.rs  pid.rs
rover-kiwi/zenoh_bridge/: Cargo.toml  zenoh_config.json5
rover-kiwi/zenoh_bridge/src/: main.rs
rover_controller/: Cargo.toml
rover_controller/src/: main.rs
sim_interface/: Cargo.toml
sim_interface/src/: main.rs
speech_recognizer/: Cargo.toml
speech_recognizer/src/: main.rs
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/components/: CameraViewer.tsx  FloatingMetrics.tsx  LocationMap.tsx  VoiceControls.tsx
src/components/atoms/: BatteryIndicator.tsx  LoadingSpinner.tsx  StatusBadge.tsx  ToggleButton.tsx  index.ts
src/components/molecules/: AnimationControls.tsx  InputWithAction.tsx  PosePresetSelector.tsx  StatPanel.tsx  ToggleControl.tsx
src/components/organisms/: DraggablePanel.tsx  FleetSelector.tsx  URDFViewer.tsx  index.ts
src/components/pages/: RoboRoverControl.tsx  URDFVisualizationPage.tsx
src/hooks/: useMetricColor.ts  useSocketListener.ts
src/lib/: trajectoryAnimator.ts  urdfLoader.ts
src/styles/: globals.css
src/types/: performance.ts  socket.ts  urdf.ts  voice.ts
test_keyboard/: Cargo.toml
test_keyboard/src/: main.rs
video_encoder/: Cargo.toml
video_encoder/src/: main.rs
video_processor/: Cargo.toml
video_processor/src/: main.rs
visual_servo_controller/: Cargo.toml
visual_servo_controller/src/: main.rs
web_bridge/: Cargo.toml
web_bridge/src/: main.rs
