[workspace]
resolver = "2"
members = [
    "arm_controller",
    "sim_interface",
    "dispatcher_keyboard",
    "robo_rover_lib",  # Shared library for common types and utilities
    "rover_controller",
    "web_bridge",
    "kornia_capture",
    "audio_capture",
    "object_detector",
]

[workspace.dependencies]
# Shared dependencies across all workspace members
dora-node-api = "0.3.13"
dora-core = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
nalgebra = "0.33"
eyre = "0.6.8"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
