[package]
name = "arm_bot_lib"
version = "0.1.0"
edition = "2021"
description = "Shared library for robotic arm controller types and utilities"

[dependencies]
# Use workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
nalgebra = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }