[package]
name = "camera_capture"
version = "0.1.0"
edition = "2021"
description = "Camera capture node for video streaming"

[dependencies]
# Workspace dependencies
dora-node-api = { workspace = true }
dora-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Local shared library
robo_rover_lib = { path = "../robo_rover_lib" }

# Video capture
nokhwa = { version = "0.10", features = ["input-native"] }