[package]
name = "config_test"
version = "0.1.0"
edition = "2021"
description = "Configuration testing utility for arm configurations"

[dependencies]
# Workspace dependencies
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

# Local shared library
robo_rover_lib = { path = "../robo_rover_lib" }