[package]
name = "sim_interface"
version = "0.1.0"
edition = "2021"
description = "Simulation interface node for Unity WebSocket and mock simulation"

[dependencies]
# Existing dependencies
dora-node-api = { workspace = true }
dora-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Add SocketIO server
tokio = { version = "1.24.2", features = ["full"] }
tokio-tungstenite = "0.20"
socketioxide = "0.12"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

robo_rover_lib = { path = "../robo_rover_lib" }