[package]
name = "video_processor"
version = "0.1.0"
edition = "2021"
description = "Video processing node for compression and overlay rendering"

[dependencies]
# Workspace dependencies
dora-node-api = { workspace = true }
dora-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Local shared library
robo_rover_lib = { path = "../robo_rover_lib" }

# Image processing
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"

# Performance
rayon = "1.8"
chrono = "0.4.41"