[package]
name = "audio_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
dora-node-api = { workspace = true }
eyre = "0.6"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
robo_rover_lib = { path = "../../robo_rover_lib" }

# Audio processing
byteorder = "1.5"
