[package]
name = "command_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
dora-node-api = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

# Arrow for data handling
arrow = "54"

# Pattern matching
regex = "1.10"
once_cell = "1.19"
aho-corasick = "1.1"

robo_rover_lib = { path = "../../robo_rover_lib" }
