[package]
name = "speech_recognizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
dora-node-api = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Whisper for speech recognition
whisper-rs = "0.12"

# Audio processing
hound = "3.5"  # WAV file support for Whisper input

robo_rover_lib = { path = "../../robo_rover_lib" }
