[package]
name = "arm_controller"
version = "0.1.0"
edition = "2021"
description = "Robotic arm controller node for dora-rs dataflow"

[dependencies]
# Workspace dependencies
dora-node-api = { workspace = true }
dora-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

robo_rover_lib = { path = "../../robo_rover_lib" }