[package]
name = "kokoro_tts"
version = "0.1.0"
edition = "2021"

[dependencies]
dora-node-api = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Kokoro TTS - minimal, fast, zero-config TTS
kokoro-tiny = { version = "0.1.0", features = ["playback"] }

# Async runtime for Kokoro
tokio = { version = "1", features = ["rt", "macros"] }

# Directory utilities
dirs = "5.0"

robo_rover_lib = { path = "../../robo_rover_lib" }
