[package]
name = "object_detector"
version = "0.1.0"
edition = "2021"

[dependencies]
robo_rover_lib = { path = "../../robo_rover_lib" }
dora-node-api = { workspace = true }
eyre = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
ndarray = "0.15"
ort = { version = "1.16.3", default-features = false, features = ["load-dynamic", "download-binaries"] }
tracing = "0.1"
