[package]
name = "visual_servo_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
dora-node-api = { workspace = true }
robo_rover_lib = { path = "../../robo_rover_lib" }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
nalgebra = { workspace = true }
uuid = { workspace = true }
arrow = "53.3"
